修改阅读器加入工具栏，正在修改书签

--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="vender/JSZip/jszip.js"></script>
+    <script type="text/javascript" src="vender/epub.js/epub.js"></script>
+    <script type="text/javascript" src="vender/Rangy/rangy-core.js"></script>
+    <script type="text/javascript" src="vender/Rangy/rangy-serializer.js"></script>
+    <script type="text/javascript" src="vender/Rangy/rangy-classapplier.js"></script>
+    <script type="text/javascript" src="vender/Rangy/rangy-highlighter.js"></script>
+    <script type="text/javascript" src="vender/Rangy/rangy-textrange.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
